--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@
 body {
     background-color: aliceblue;
     font-family: 'Red Hat Display', sans-serif;
+    background-image: url(./images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
 }
 
 .container {
